--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,8 +474,8 @@ h6 { font-size: 16px; }
 	margin-bottom: 25px;
 	padding: 25px 20px;
 	border: 1px solid #e5e5e5;
-	/* padding: 35px 40px; */
-    background-color: #d94148;
+	/* padding: 35px 40px; 
+    background-color: #d94148;*/
 }
 
 .sbox-1 {
